# fitvid

./: .gitignore  Cargo.toml  README.md  RUST_VERSION.md  build.sh  fitvid.py
.github/workflows/: deploy.yml
src/: activity.rs  lib.rs  smoothing.rs  types.rs  utils.rs  video_processor.rs
www/: index.html  index.js  package.json  styles.css  vite.config.js
