[package]
name = "fitvid-wasm"
version = "0.1.0"
authors = ["Andrew Grosser"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# Linear algebra for Kalman filtering
nalgebra = "0.32"

# Async support
futures = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "Performance",
    "VideoDecoder",
    "VideoEncoder",
    "VideoFrame",
    "VideoDecoderConfig",
    "VideoEncoderConfig",
    "VideoDecoderInit",
    "VideoEncoderInit",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "File",
    "FileReader",
    "Blob",
    "BlobPropertyBag",
    "MessageEvent",
    "EncodedVideoChunk",
    "EncodedVideoChunkType",
    "VideoColorSpace",
    "VideoPixelFormat",
]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary size

[profile.release.package."*"]
opt-level = "z"
